# archwright

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.example.yml  inventory.example.yaml  pyproject.toml
.github/workflows/: ci.yml
archwright_web/: __init__.py  app.py  server.py
archwright_web/routers/: archives.py  config_editor.py  dashboard.py  jobs.py  logs.py  preview.py  restore.py
archwright_web/services/: archive_service.py  collector_service.py  config_registry.py  config_service.py  executor.py  inventory.py  job_runner.py  restore_orchestrator.py  safe_paths.py
archwright_web/static/: style.css
archwright_web/templates/: base.html  dashboard.html
archwright_web/templates/archives/: _contents.html  list.html
archwright_web/templates/config/: _preview_results.html  _yaml_preview.html  editor.html
archwright_web/templates/logs/: view.html
archwright_web/templates/partials/: _job_logs.html  _job_status.html
archwright_web/templates/restore/: _plan_table.html  step1_choose.html  step2_plan.html  step3_confirm.html  step4_result.html
backup/: README.md  __init__.py  __main__.py  archive.py  backup-config.example.yaml  cli.py  collector.py  config.py  constants.py  db_dump.py  json_output.py  logging_setup.py  models.py  orchestrator.py  restore.py  rotation.py
docs/: architecture.md  configuration.md  control-plane-roadmap.md  deployment.md  docker.md  threat-model.md  web-ui.md
scripts/: run_backend.sh
tests/: conftest.py  test_config_extensions.py  test_db_dump.py  test_e2e.py  test_edge_cases.py  test_integration.py  test_restore.py  test_unit.py  test_web_routes.py  test_web_services.py
